Chat messaging is styled slightly. I still need to figure out the overflow issue, as only the first 6 messages show up.

--- a/app/src/components/InformationStyles.scss
+++ b/app/src/components/InformationStyles.scss
@@ -93,7 +93,7 @@ Chat
         height: 130px;
 
         .chat-message {
-            padding-left: 5px;
+            padding-left: 10px;
             display: flex;
             text-align: left;
             color: white;
@@ -104,11 +104,22 @@ Chat
 
         .event-message {
             text-align: left;
-            padding-left: 5px;
+            padding-left: 10px;
             color: #49757a;
             .event-text {
                 color: #49757a;
             }
+        }
+    }
+
+    .chatbox-container {
+        width: 100%;
+        align-self: flex-start;
+        .chatbox {
+            width: 95%;
+            padding: 5px;
+            background-color: black;
+            color: white;
         }
     }
 }
